# GrayScott

./: .gitignore  README.md  anim.py  plot.py  to_movie.py
cpp/: CMakeLists.txt
cpp/src/: grayscott.cpp  grayscott.h  grayscott_utils.cpp  grayscott_utils.h  linalg.cpp  linalg.h  main.cpp  simplecmdparser.hpp  solver.cpp  solver.h
fortran90/: CMakeLists.txt  namelist
fortran90/src/: gs_io.f90  gs_linalg.f90  gs_main.f90  gs_numeric_utils.f90  gs_solver.f90  gs_types.f90  gs_utils.f90
python/: main.py
python/cppbindings/: CMakeLists.txt  gs_solver.cpp  gs_solver.h  main.cpp
qt_app/: CMakeLists.txt  canvas.cpp  canvas.h  colormapping.cpp  colormapping.h  grayscott_solver.cpp  grayscott_solver.h  grayscott_utils.cpp  grayscott_utils.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  solver.cpp  solver.h
rust/: Cargo.toml
rust/src/: gs_core.rs  main.rs
